
[TestCipherCommandHelp - 1]
Cipher command provides access to SOPS (Secrets OPerationS) functionality
for encrypting and decrypting files.

SOPS supports multiple key management systems:
  - age recipients
  - PGP fingerprints
  - AWS KMS
  - GCP KMS
  - Azure Key Vault
  - HashiCorp Vault

Usage:
  cipher [command]

Available Commands:
  completion  Generate the autocompletion script for the specified shell
  decrypt     Decrypt a file with SOPS
  edit        Edit an encrypted file with SOPS
  encrypt     Encrypt a file with SOPS
  help        Help about any command
  import      Import an age key to the system's SOPS key location
  rotate      Rotate data keys for SOPS-encrypted files

Flags:
  -h, --help   help for cipher

Use "cipher [command] --help" for more information about a command.

---

[TestDecryptCommandHelp - 1]
Decrypt a file using SOPS (Secrets OPerationS).

If no file is given, input is read from stdin.

SOPS supports multiple key management systems:
  - age recipients
  - PGP fingerprints
  - AWS KMS
  - GCP KMS
  - Azure Key Vault
  - HashiCorp Vault

Example:
  ksail workload cipher decrypt secrets.yaml
  ksail workload cipher decrypt secrets.yaml --extract '["data"]["password"]'
  ksail workload cipher decrypt secrets.yaml --output plaintext.yaml
  ksail workload cipher decrypt secrets.yaml --ignore-mac
  cat secrets.enc.yaml | ksail workload cipher decrypt

Usage:
  cipher decrypt [file] [flags]

Flags:
  -e, --extract string   extract a specific key from the decrypted file (JSONPath format)
  -h, --help             help for decrypt
      --ignore-mac       ignore Message Authentication Code (MAC) check
  -o, --output string    output file path (default: stdout)

---

[TestEditCommandHelp - 1]
Edit an encrypted file using SOPS (Secrets OPerationS).

If the file exists and is encrypted, it will be decrypted for editing.
If the file does not exist, an example file will be created.

The editor is determined by (in order of precedence):
  1. --editor flag
  2. spec.editor from ksail.yaml config
  3. SOPS_EDITOR or EDITOR environment variables
  4. Fallback to vim, nano, or vi

SOPS supports multiple key management systems:
  - age recipients
  - PGP fingerprints
  - AWS KMS
  - GCP KMS
  - Azure Key Vault
  - HashiCorp Vault

Example:
  ksail workload cipher edit secrets.yaml
  ksail workload cipher edit --editor "code --wait" secrets.yaml
  SOPS_EDITOR="code --wait" ksail workload cipher edit secrets.yaml

Usage:
  cipher edit <file> [flags]

Flags:
      --editor string      editor command to use (e.g., 'code --wait', 'vim', 'nano')
  -h, --help               help for edit
      --ignore-mac         ignore Message Authentication Code during decryption
      --show-master-keys   show master keys in the editor

---

[TestEncryptCommandHelp - 1]
Encrypt a file using SOPS (Secrets OPerationS).

SOPS supports multiple key management systems:
  - age recipients
  - PGP fingerprints
  - AWS KMS
  - GCP KMS
  - Azure Key Vault
  - HashiCorp Vault

Example:
  ksail workload cipher encrypt secrets.yaml

Usage:
  cipher encrypt <file> [flags]

Flags:
  -h, --help   help for encrypt

---

[TestImportCommandHelp - 1]
Import an age private key to the system's default SOPS age key location.

The private key must be provided as a command argument and must include the full
key with the AGE-SECRET-KEY- prefix.

The public key will be automatically derived from the private key.

The command will automatically add metadata including:
  - Creation timestamp
  - Public key (derived from private key)

Key file location (checked in order):
  1. SOPS_AGE_KEY_FILE environment variable
  2. $XDG_CONFIG_HOME/sops/age/keys.txt (if XDG_CONFIG_HOME is set)
  3. Platform-specific defaults:
     Linux:   $HOME/.config/sops/age/keys.txt
     macOS:   $HOME/Library/Application Support/sops/age/keys.txt
     Windows: %AppData%\sops\age\keys.txt

The private key must be in age format (starting with "AGE-SECRET-KEY-").

Examples:
  # Import a private key (public key will be derived automatically)
  ksail workload cipher import AGE-SECRET-KEY-1ABCDEF...

Usage:
  cipher import PRIVATE_KEY [flags]

Flags:
  -h, --help   help for import

---

[TestRotateCommandHelp - 1]
Rotate data keys for SOPS-encrypted files.

This command generates a new data encryption key and re-encrypts all values
in the target file(s). This is the same behavior as the native 'sops rotate'
command, extended with batch directory support.

When the target is a file, only that file is rotated. When the target is a
folder, all SOPS-encrypted YAML and JSON files in the folder are rotated.
Use --recursive to include subdirectories.

Optionally, master key recipients can be added or removed during rotation:
  --add-key adds a new master key recipient
  --remove-key removes an existing master key recipient

By default, the command shows which files will be affected and prompts for
confirmation. Use --force to skip the confirmation prompt. In non-interactive
environments (no TTY), the prompt is automatically skipped.

Use --dry-run to preview which files would be rotated without making changes.

Key type is auto-detected from the key format:
  - Age keys (age1...)

Examples:
  # Rotate all encrypted files in a folder (with confirmation)
  ksail workload cipher rotate ./k8s

  # Rotate without confirmation prompt
  ksail workload cipher rotate ./k8s --force

  # Rotate recursively through subdirectories
  ksail workload cipher rotate ./k8s --recursive

  # Rotate a single file
  ksail workload cipher rotate secrets.yaml

  # Add a new age recipient during rotation
  ksail workload cipher rotate ./k8s --add-key age1ql3z7hjy54pw3hyww5ayyfg7zqgvc7w3j2elw8zmrj2kg5sfn9aqmcac8p

  # Remove an old age recipient during rotation
  ksail workload cipher rotate ./k8s --remove-key age1oldkey...

  # Replace a recipient (add new, remove old)
  ksail workload cipher rotate ./k8s --add-key age1newkey... --remove-key age1oldkey...

  # Re-seal every file to a completely new recipient set (e.g. after a key is
  # retired or compromised) — declare the full set, no need to enumerate old keys
  ksail workload cipher rotate ./k8s --set-key age1newkey1... --set-key age1newkey2... --recursive

  # Preview which files would be rotated without making changes
  ksail workload cipher rotate ./k8s --dry-run

Usage:
  cipher rotate <file/folder> [flags]

Flags:
      --add-key string        public key to add as a master key recipient
      --dry-run               show which files would be rotated without making changes
  -f, --force                 skip confirmation prompt and rotate immediately
  -h, --help                  help for rotate
  -r, --recursive             scan subdirectories when target is a folder
      --remove-key string     public key to remove from master key recipients
      --set-key stringArray   public key for the complete new recipient set (repeatable); replaces all recipients and re-seals to a fresh data key — mutually exclusive with --add-key/--remove-key

---
